--- a/app/src/main/res/layout/daily_challenge.xml
+++ b/app/src/main/res/layout/daily_challenge.xml
@@ -26,6 +26,7 @@
             app:layout_constraintHorizontal_bias="0.063"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
@@ -51,7 +52,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:id = "@+id/questioning">
 
             <TextView
                 android:layout_width="match_parent"
@@ -128,7 +130,38 @@
 
     </RelativeLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id = "@+id/popup"
+        android:background="@drawable/border"
+        android:layout_below="@id/topScroll"
+        android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#000000"
+            android:textSize="15dp"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="#00a30e"
+                android:text="Confirm" />
+
+        </LinearLayout>
+    </LinearLayout>
 
 </RelativeLayout>
