see pull request notes for full changes

--- a/app/src/main/res/layout/layout_two.xml
+++ b/app/src/main/res/layout/layout_two.xml
@@ -305,6 +305,19 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0" />
 
+            <Button
+                android:id="@+id/tutorial"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="showTutorial"
+                android:text="help"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/viewPicButton"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/backButton"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -408,6 +421,25 @@
         <FrameLayout
             android:id="@+id/calculator_fragment"
             android:name="com.innovator.solve.CalculatorFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+        </FrameLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/tutorial_layout"
+        android:layout_width="275dp"
+        android:layout_height="500dp"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <FrameLayout
+            android:id="@+id/tutorial_fragment"
+            android:name="com.innovator.solve.TutorialFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1">
